--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8"/>
+        <title>Aleksander Ratajski Lat 18</title>
         <style>
             body{
                 text-align: center;
